# RSS-Feed-Backend

./: .env.example  .env.graph-api  .env.pool_fix  .env.prod.template  .env.restore  .env.smtp_example  .env.supabase_fix  .env.test  .gitignore  ALL_FIXES_APPLIED_STATUS.md  ANALYTICS_FEATURE_SUMMARY.md  API_GAPS_ANALYSIS.md  API_GAPS_SUMMARY.md  ARCHITECTURE.md  ARTICLES_API_REVIEW.md  BACKEND_API_REQUIREMENTS.md  BACKEND_COMPLETE_READY_FOR_FRONTEND.md  BACKEND_PENDING_REQUIREMENTS.md  BACKEND_RESPONSE_TO_FRONTEND_ENHANCEMENTS.md  BACKEND_TEAM_UPDATE.md  BOOKMARKS_IMPLEMENTATION_COMPLETE.md  BOOKMARKS_TEST_RESULTS.md  CELERY_AND_ADMIN_GUIDE.md  CHANGELOG.md  CI_CD_SETUP.md  COMPLETION_REPORT.md  CONTRIBUTING.md  DATABASE_ANALYSIS_SOURCE_ISSUE.md  DATABASE_SEEDING_COMPLETE.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_SUMMARY.md  DEPLOYMENT_TESTING_PLAN.md  DEPLOY_TO_STAGING.md  DI_CICD_COMPLETE.md  Dockerfile  EMAIL_TEMPLATE_REDESIGN.md  ENDPOINTS_IMPLEMENTATION_COMPLETE.md  END_TO_END_API_FLOW.md  ENHANCEMENT_QUICKSTART.md  EXECUTIVE_SUMMARY.md  (+151 more)
.github/: PULL_REQUEST_TEMPLATE.md
alembic/: env.py
app/: main.py
docker/: docker-compose.dev.yml
docs/: ANALYTICS_API.md  ANALYTICS_PHASE_2_IMPLEMENTATION_PLAN.md  API_FIX_VERIFICATION_FAILED.md  API_PERFORMANCE_OPTIMIZATIONS.md  ARTICLE_DATA_STRUCTURE.md  CACHING_EXAMPLE.md  CITATION_DATA_STORAGE_STATUS.md  CRITICAL_BUG_ZERO_SOURCES_ISSUE.md  CRITICAL_ISSUE_EVIDENCE_SEARCH.md  DATABASE_CONFIG.md  DATABASE_FUNCTIONS_BUSINESS_LOGIC.md  DATABASE_OPTIMIZATION.md  DATABASE_OPTIMIZATION_COMPLETE.md  DATABASE_SCHEMA.md  EMAIL_CUSTOMIZATION_GUIDE.md  FILE_STRUCTURE_IMPROVEMENTS.md  FRONTEND_API_GUIDE.md  FRONTEND_CITATION_DATA_READY.md  FUTURE_ENDPOINTS.md  (+42 more)
(+299 files in other folders)
